--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,11 @@ fabric.properties
 # Editor-based Rest Client
 .idea/httpRequests
 
+.idea/vcs.xml
+build/generated/source/kapt/test/
+build/generated/source/kaptKotlin/
+build/kotlin/sessions/
+build/tmp/compileJava/
+build/tmp/kapt/main/kotlinGenerated/
+build/tmp/kapt/test/
+build/tmp/kapt3/classes/
